--- a/matrixTest.html
+++ b/matrixTest.html
@@ -39,7 +39,7 @@
 
 
 
- <title>My First Javascript</title>
+ <title>MatScript-Sim</title>
     <link href="styles.css" rel="stylesheet" type="text/css"></link>
 </head>
 
